Finally fixed the double scrollbar.

--- a/styles/critical.css
+++ b/styles/critical.css
@@ -25,8 +25,8 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
-  overflow-x: hidden;
   width: 100%;
+  overflow: visible;
 }
 
 *:focus-visible {
