--- a/styles/global.css
+++ b/styles/global.css
@@ -48,6 +48,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+  overflow: visible;
 }
 
 h1,
@@ -731,7 +732,7 @@ textarea:focus {
     -moz-osx-font-smoothing: grayscale;
     position: relative;
     view-transition-name: body;
-    overflow-x: hidden;
+    overflow: visible;
   }
 
   main,
